test/langtools/tools/javac/valhalla/lworld-values/CheckNullCastable.out
CheckNullCastable.java:11:17: compiler.err.value.does.not.support: !=
CheckNullCastable.java:12:18: compiler.err.value.does.not.support: !=
2 errors
